--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
+    "webpack": "webpack -w --config ./examples/Checkout/webpack.config.js",
     "clean": "bsb -clean-world"
   },
   "repository": {
@@ -27,9 +28,7 @@
     "bsconfig.json"
   ],
   "devDependencies": {
-    "bs-platform": "^4.0.5",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "bs-platform": "^4.0.5"
   },
   "peerDependencies": {},
   "dependencies": {
